--- a/lis_haken.html
+++ b/lis_haken.html
@@ -45,7 +45,7 @@
         <div class="col-lg-10">
           <div class="main-content">
             <div class="card border-0 shadow-lg mb-5">
-              <div class="card-body p-3">
+              <div class="card-body p-3 p-md-5">
                 <div class="text-center mb-4">
                   <i class="fas fa-users fa-3x text-primary mb-3"></i>
                 </div>
