--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                    <p>
+                                    <p class="p-2 p-md-3">
                                         初めまして。リス株式会社・代表取締役社長の木村です。
                                         当社は創業から46年以上の歴史を持つ会社で、「人と企業、誰もがつながり合う社会創り」に貢献するため、ベンチャースピリッツを持ちながら、当社が運営する転職サイト『しごとナビ』は111万人の会員数を突破しました。
                                         そんな当社がなぜ、多くの顧客から信頼されるまでに成長出来たのか。それは、「人の成長が、組織を成長させる」というモットーがあるからです。
@@ -159,9 +159,9 @@
                                 <div class="info-row">
                                     <div class="info-label">所属団体</div>
                                     <div class="info-value">
-                                        <div>■ 日本人材派遣協会会員</div>
-                                        <div>■ 日本人材紹介事業協会会員</div>
-                                        <div>■ 暴力団追放運動推進都民センター賛助会員</div>
+                                        <div><a href="https://www.jassa.or.jp/">■ 日本人材派遣協会会員</a></div>
+                                        <div><a href="https://www.jesra.or.jp/">■ 日本人材紹介事業協会会員</a></a></div>
+                                        <div><a href="https://boutsui-tokyo.com/">■ 暴力団追放運動推進都民センター賛助会員</a></div>
                                         <div>■ 東京商工会議所会員</div>
                                     </div>
                                 </div>
@@ -378,8 +378,8 @@
                                                         <div class="info-table">
                                                             <ul>
                                                                 <li><i class="fa-solid fa-building"></i> <span>静岡支社</span></li>
-                                                                <li><i class="fa-solid fa-location-dot"></i> <span>静岡県静岡市</span></li>
-                                                                <li><i class="fa-solid fa-phone"></i> <span>054-XXX-XXXX</span></li>
+                                                                <li><i class="fa-solid fa-location-dot"></i> <span>〒411-0943 静岡県駿東郡長泉町下土狩30-1 山光ビルB-402</span></li>
+                                                                <li><i class="fa-solid fa-phone"></i> <span>055-988-6660</span></li>
                                                                 <li><i class="fa-regular fa-calendar-check"></i> <span>9:00-18:00</span></li>
                                                                 <li><i class="fa-solid fa-calendar-days"></i> <span>土日祝日</span></li>
                                                             </ul>
@@ -451,8 +451,8 @@
                                                         <div class="info-table">
                                                             <ul>
                                                                 <li><i class="fa-solid fa-building"></i> <span>名古屋支社</span></li>
-                                                                <li><i class="fa-solid fa-location-dot"></i> <span>愛知県名古屋市</span></li>
-                                                                <li><i class="fa-solid fa-phone"></i> <span>052-XXX-XXXX</span></li>
+                                                                <li><i class="fa-solid fa-location-dot"></i> <span>〒460-0003 愛知県名古屋市中区錦3-7-15 名古屋ＤＩＣビル9F</span></li>
+                                                                <li><i class="fa-solid fa-phone"></i> <span>052-961-0657</span></li>
                                                                 <li><i class="fa-regular fa-calendar-check"></i> <span>9:00-18:00</span></li>
                                                                 <li><i class="fa-solid fa-calendar-days"></i> <span>土日祝日</span></li>
                                                             </ul>
@@ -514,8 +514,8 @@
                                                         <div class="info-table">
                                                             <ul>
                                                                 <li><i class="fa-solid fa-building"></i> <span>大阪支社</span></li>
-                                                                <li><i class="fa-solid fa-location-dot"></i> <span>大阪府大阪市</span></li>
-                                                                <li><i class="fa-solid fa-phone"></i> <span>06-XXX-XXXX</span></li>
+                                                                <li><i class="fa-solid fa-location-dot"></i> <span>〒541-0047 大阪府大阪市中央区淡路町3-5-13 創建御堂筋ビル９階</span></li>
+                                                                <li><i class="fa-solid fa-phone"></i> <span>06-6202-0470</span></li>
                                                                 <li><i class="fa-regular fa-calendar-check"></i> <span>9:00-18:00</span></li>
                                                                 <li><i class="fa-solid fa-calendar-days"></i> <span>土日祝日</span></li>
                                                             </ul>
@@ -576,8 +576,8 @@
                                                         <div class="info-table">
                                                             <ul>
                                                                 <li><i class="fa-solid fa-building"></i> <span>岡山オフィス</span></li>
-                                                                <li><i class="fa-solid fa-location-dot"></i> <span>岡山県岡山市</span></li>
-                                                                <li><i class="fa-solid fa-phone"></i> <span>086-XXX-XXXX</span></li>
+                                                                <li><i class="fa-solid fa-location-dot"></i> <span>〒700-0907 岡山県岡山市北区下石井1丁目1-1 アーバンオフィスビル７階</span></li>
+                                                                <li><i class="fa-solid fa-phone"></i> <span>086-234-7008</span></li>
                                                                 <li><i class="fa-regular fa-calendar-check"></i> <span>9:00-18:00</span></li>
                                                                 <li><i class="fa-solid fa-calendar-days"></i> <span>土日祝日</span></li>
                                                             </ul>
@@ -638,8 +638,8 @@
                                                         <div class="info-table">
                                                             <ul>
                                                                 <li><i class="fa-solid fa-building"></i> <span>群馬オフィス</span></li>
-                                                                <li><i class="fa-solid fa-location-dot"></i> <span>群馬県前橋市</span></li>
-                                                                <li><i class="fa-solid fa-phone"></i> <span>027-XXX-XXXX</span></li>
+                                                                <li><i class="fa-solid fa-location-dot"></i> <span>〒378-0042 群馬県沼田市西倉内町680-1 モンブランビル1F</span></li>
+                                                                <li><i class="fa-solid fa-phone"></i> <span>0278-30-3200</span></li>
                                                                 <li><i class="fa-regular fa-calendar-check"></i> <span>9:00-18:00</span></li>
                                                                 <li><i class="fa-solid fa-calendar-days"></i> <span>土日祝日</span></li>
                                                             </ul>
